maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  setDirection(Direction.NORD)
  ^PledgeMaze:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  res = estFaceMur()
  ^PledgeMaze:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  setDirection(dirInit)
  ^PledgeMaze:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return res
  ^